src/swig-flat-interface/generated/strumpack_flat.f90


subroutine STRUMPACK_set_mc64job(s, job) &
bind(C, name="STRUMPACK_set_mc64job")
use, intrinsic :: ISO_C_BINDING
import :: strumpack_sparsesolver
type(STRUMPACK_SparseSolver), intent(in), value :: s
integer(C_INT), intent(in), value :: job
end subroutine

subroutine STRUMPACK_set_matching(s, job) &
bind(C, name="STRUMPACK_set_matching")
use, intrinsic :: ISO_C_BINDING
import :: strumpack_sparsesolver
type(STRUMPACK_SparseSolver), intent(in), value :: s
integer(C_INT), intent(in), value :: job
end subroutine

subroutine STRUMPACK_set_Krylov_solver(s, solver_type) &
bind(C, name="STRUMPACK_set_Krylov_solver")
use, intrinsic :: ISO_C_BINDING
import :: strumpack_sparsesolver
type(STRUMPACK_SparseSolver), intent(in), value :: s
integer(C_INT), intent(in), value :: solver_type
end subroutine

subroutine STRUMPACK_enable_HSS(s) &
bind(C, name="STRUMPACK_enable_HSS")
use, intrinsic :: ISO_C_BINDING
import :: strumpack_sparsesolver
type(STRUMPACK_SparseSolver), intent(in), value :: s
end subroutine

subroutine STRUMPACK_disable_HSS(s) &
bind(C, name="STRUMPACK_disable_HSS")
use, intrinsic :: ISO_C_BINDING
import :: strumpack_sparsesolver
type(STRUMPACK_SparseSolver), intent(in), value :: s
end subroutine

subroutine STRUMPACK_set_HSS_min_front_size(s, size) &
bind(C, name="STRUMPACK_set_HSS_min_front_size")
use, intrinsic :: ISO_C_BINDING
import :: strumpack_sparsesolver
type(STRUMPACK_SparseSolver), intent(in), value :: s
integer(C_INT), intent(in), value :: size
end subroutine

subroutine STRUMPACK_set_HSS_min_sep_size(s, size) &
bind(C, name="STRUMPACK_set_HSS_min_sep_size")
use, intrinsic :: ISO_C_BINDING
import :: strumpack_sparsesolver
type(STRUMPACK_SparseSolver), intent(in), value :: s
integer(C_INT), intent(in), value :: size
end subroutine

subroutine STRUMPACK_set_HSS_max_rank(s, max_rank) &
bind(C, name="STRUMPACK_set_HSS_max_rank")
use, intrinsic :: ISO_C_BINDING
import :: strumpack_sparsesolver
type(STRUMPACK_SparseSolver), intent(in), value :: s
integer(C_INT), intent(in), value :: max_rank
end subroutine

subroutine STRUMPACK_set_HSS_leaf_size(s, leaf_size) &
bind(C, name="STRUMPACK_set_HSS_leaf_size")
use, intrinsic :: ISO_C_BINDING
import :: strumpack_sparsesolver
type(STRUMPACK_SparseSolver), intent(in), value :: s
integer(C_INT), intent(in), value :: leaf_size
end subroutine

subroutine STRUMPACK_set_HSS_rel_tol(s, rctol) &
bind(C, name="STRUMPACK_set_HSS_rel_tol")
use, intrinsic :: ISO_C_BINDING
import :: strumpack_sparsesolver
type(STRUMPACK_SparseSolver), intent(in), value :: s
real(C_DOUBLE), intent(in), value :: rctol
end subroutine

subroutine STRUMPACK_set_HSS_abs_tol(s, actol) &
bind(C, name="STRUMPACK_set_HSS_abs_tol")
use, intrinsic :: ISO_C_BINDING
import :: strumpack_sparsesolver
type(STRUMPACK_SparseSolver), intent(in), value :: s
real(C_DOUBLE), intent(in), value :: actol
end subroutine

function STRUMPACK_verbose(s) &
bind(C, name="STRUMPACK_verbose") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
import :: strumpack_sparsesolver
type(STRUMPACK_SparseSolver), intent(in), value :: s
integer(C_INT) :: fresult
end function

function STRUMPACK_maxit(s) &
bind(C, name="STRUMPACK_maxit") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
import :: strumpack_sparsesolver
type(STRUMPACK_SparseSolver), intent(in), value :: s
integer(C_INT) :: fresult
end function

function STRUMPACK_get_gmres_restart(s) &
bind(C, name="STRUMPACK_get_gmres_restart") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
import :: strumpack_sparsesolver
type(STRUMPACK_SparseSolver), intent(in), value :: s
integer(C_INT) :: fresult
end function

function STRUMPACK_rel_tol(s) &
bind(C, name="STRUMPACK_rel_tol") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
import :: strumpack_sparsesolver
type(STRUMPACK_SparseSolver), intent(in), value :: s
real(C_DOUBLE) :: fresult
end function

function STRUMPACK_abs_tol(s) &
bind(C, name="STRUMPACK_abs_tol") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
import :: strumpack_sparsesolver
type(STRUMPACK_SparseSolver), intent(in), value :: s
real(C_DOUBLE) :: fresult
end function

function STRUMPACK_nd_param(s) &
bind(C, name="STRUMPACK_nd_param") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
import :: strumpack_sparsesolver
type(STRUMPACK_SparseSolver), intent(in), value :: s
integer(C_INT) :: fresult
end function

function STRUMPACK_reordering_method(s) &
bind(C, name="STRUMPACK_reordering_method") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
import :: strumpack_sparsesolver
type(STRUMPACK_SparseSolver), intent(in), value :: s
integer(C_INT) :: fresult
end function

function STRUMPACK_GramSchmidt_type(s) &
bind(C, name="STRUMPACK_GramSchmidt_type") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
import :: strumpack_sparsesolver
type(STRUMPACK_SparseSolver), intent(in), value :: s
integer(C_INT) :: fresult
end function

function STRUMPACK_mc64job(s) &
bind(C, name="STRUMPACK_mc64job") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
import :: strumpack_sparsesolver
type(STRUMPACK_SparseSolver), intent(in), value :: s
integer(C_INT) :: fresult
end function

function STRUMPACK_matching(s) &
bind(C, name="STRUMPACK_matching") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
import :: strumpack_sparsesolver
type(STRUMPACK_SparseSolver), intent(in), value :: s
integer(C_INT) :: fresult
end function

function get_STRUMPACK_Krylov_solver(s) &
bind(C, name="STRUMPACK_Krylov_solver") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
import :: strumpack_sparsesolver
type(STRUMPACK_SparseSolver), intent(in), value :: s
integer(C_INT) :: fresult
end function

function use_HSS(s) &
bind(C, name="use_HSS") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
import :: strumpack_sparsesolver
type(STRUMPACK_SparseSolver), intent(in), value :: s
integer(C_INT) :: fresult
end function

function STRUMPACK_HSS_min_front_size(s) &
bind(C, name="STRUMPACK_HSS_min_front_size") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
import :: strumpack_sparsesolver
type(STRUMPACK_SparseSolver), intent(in), value :: s
integer(C_INT) :: fresult
end function

function STRUMPACK_HSS_min_sep_size(s) &
bind(C, name="STRUMPACK_HSS_min_sep_size") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
import :: strumpack_sparsesolver
type(STRUMPACK_SparseSolver), intent(in), value :: s
integer(C_INT) :: fresult
end function

function STRUMPACK_HSS_max_rank(s) &
bind(C, name="STRUMPACK_HSS_max_rank") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
import :: strumpack_sparsesolver
type(STRUMPACK_SparseSolver), intent(in), value :: s
integer(C_INT) :: fresult
end function

function STRUMPACK_HSS_leaf_size(s) &
bind(C, name="STRUMPACK_HSS_leaf_size") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
import :: strumpack_sparsesolver
type(STRUMPACK_SparseSolver), intent(in), value :: s
integer(C_INT) :: fresult
end function

function STRUMPACK_HSS_rel_tol(s) &
bind(C, name="STRUMPACK_HSS_rel_tol") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
import :: strumpack_sparsesolver
type(STRUMPACK_SparseSolver), intent(in), value :: s
real(C_DOUBLE) :: fresult
end function

function STRUMPACK_HSS_abs_tol(s) &
bind(C, name="STRUMPACK_HSS_abs_tol") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
import :: strumpack_sparsesolver
type(STRUMPACK_SparseSolver), intent(in), value :: s
real(C_DOUBLE) :: fresult
end function

function STRUMPACK_its(s) &
bind(C, name="STRUMPACK_its") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
import :: strumpack_sparsesolver
type(STRUMPACK_SparseSolver), intent(in), value :: s
integer(C_INT) :: fresult
end function

function STRUMPACK_rank(s) &
bind(C, name="STRUMPACK_rank") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
import :: strumpack_sparsesolver
type(STRUMPACK_SparseSolver), intent(in), value :: s
integer(C_INT) :: fresult
end function

function STRUMPACK_factor_nonzeros(s) &
bind(C, name="STRUMPACK_factor_nonzeros") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
import :: strumpack_sparsesolver
type(STRUMPACK_SparseSolver), intent(in), value :: s
integer(C_LONG_LONG) :: fresult
end function

function STRUMPACK_factor_memory(s) &
bind(C, name="STRUMPACK_factor_memory") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
import :: strumpack_sparsesolver
type(STRUMPACK_SparseSolver), intent(in), value :: s
integer(C_LONG_LONG) :: fresult
end function

end interface


end module
